# rain-org-health

./: .gitignore  .prettierignore  CLAUDE.md  Cargo.toml  README.md  flake.nix
.claude-plugin/: marketplace.json
.github/workflows/: pages.yml  rust.yml  scan.yml  site-test.yml
.mutation-test/: PROGRESS.md
plugins/rain-org-health-check/.claude-plugin/: plugin.json
plugins/rain-org-health-check/roh-scan/: Cargo.toml
plugins/rain-org-health-check/roh-scan/src/: audit.rs  blobs.rs  campaign.rs  commentloc.rs  deployhealth.rs  graph.rs  issues.rs  main.rs  mutation.rs  owners.rs  protofire.rs  rpc.rs  signals.rs
plugins/rain-org-health-check/scripts/: file-issues.sh  scan.sh  secret-inventory.sh  verify-deployments.sh
plugins/rain-org-health-check/skills/rain-org-health-check/: SKILL.md
site/: README.md  audit.html  deployments.html  health.json  index.html  metrics.html  pipeline.html  repositories.html
test/: dashboard.test.js
