[package]
name = "roh-scan"
version = "0.1.0"
edition = "2021"
description = "Scan a GitHub org's repos for rainix/soldeer modernization-debt signals."
license = "LicenseRef-DCL-1.0"

[[bin]]
name = "roh-scan"
path = "src/main.rs"

[dependencies]
# Real Solidity lexing for the comment/code drift split: a hand-rolled line
# classifier cannot tell a block-comment body from a wrapped expression.
solang-parser = "0.3"
# Line diff of the comment-stripped sources, to report exact added/removed code.
similar = "2"
regex = "1"
toml = "0.8"
serde_json = { version = "1", features = ["preserve_order"] }
# ABI encode/decode + keccak for the on-chain reads (typed via the sol! macro,
# no async provider — the curl transport + RPC fallback stay hand-rolled).
alloy-sol-types = "0.8"
alloy-primitives = "0.8"
